--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -121,10 +121,51 @@ li:hover {
 #introduction p {
 	margin-bottom: 0.5em;
 }
+
 #portfolio h2 {
 	text-align: center;
 	margin-bottom: 1em;
 }
+
+/*Ajout des filtres en CSS*/
+.filters{
+	display: flex;
+	justify-content: center;
+	gap: 10px;
+}
+
+.filters__btn{
+	color: #1D6154;
+	text-align: center;
+	font-family: Syne;
+	font-size: 16px;
+	font-weight: 700;
+	border-radius: 60px;
+	border: 1px solid #1D6154;
+	height: 37px;
+	flex-shrink: 0;
+}
+
+.filters__btn:focus{
+	color: white;
+	background-color: #1D6154;
+}
+.all{
+	width: 100px;
+}
+
+.objects{
+	width: 100px;
+}
+
+.flats{
+	width: 157px;
+}
+
+.hotels{
+	width: 198px;
+}
+
 .gallery {
 	width: 100%;
 	display: grid;
@@ -139,7 +180,7 @@ li:hover {
 }
 #contact {
 	width: 50%;
-margin: auto;
+	margin: auto;
 }
 #contact > * {
 	text-align: center;
