added login-section with dynamic display on home-page

--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -31,6 +31,15 @@ footer, header, hgroup, menu, nav, section {
 body {
 	line-height: 1;
 }
+
+
+
+a{
+	text-decoration: none;
+	color: black
+}
+
+
 ol, ul {
 	list-style: none;
 }
@@ -56,7 +65,7 @@ body {
 header {
 	display: flex;
 	justify-content: space-between;
-	margin: 50px 0
+	margin: 50px 0;
 }
 section {
 	margin: 50px 0
@@ -75,7 +84,6 @@ h1 > span {
 	font-family: 'Work Sans';
 	font-size:10px;
 	letter-spacing: 0.1em;
-;
 }
 
 h2{
@@ -95,8 +103,9 @@ nav li {
 	font-size: 1.2em;
 }
 
-li:hover {
+.nav-links:hover, li:hover {
 	color: #B1663C;
+	cursor: pointer;
 }
 #introduction {
 	display: flex;
@@ -143,7 +152,8 @@ li:hover {
 	border-radius: 60px;
 	border: 1px solid #1D6154;
 	height: 37px;
-	flex-shrink: 0;
+	flex-shrink: 1;
+	box-sizing: border-box;
 }
 
 .filters__btn:focus{
@@ -178,31 +188,31 @@ li:hover {
 	width: 100%;
 
 }
-#contact {
+#contact, #login-section{
 	width: 50%;
 	margin: auto;
 }
-#contact > * {
+#contact > * , #login-section > *{
 	text-align: center;
 
 }
-#contact h2{
+#contact h2, #login-section h2{
 	margin-bottom: 20px;
 }
-#contact form {
+#contact form, #login-section form{
 	text-align: left;
 	margin-top:30px;
 	display: flex;
 	flex-direction: column;
 }
 
-#contact input {
+#contact input, #login-section input {
 	height: 50px;
 	font-size: 1.2em;
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
-#contact label {
+#contact label, #login-section label {
 	margin: 2em 0 1em 0;
 }
 #contact textarea {
@@ -219,6 +229,17 @@ input[type="submit"]{
 	width: 180px;
 	text-align: center;
 	border-radius: 60px ;
+}
+
+.forgotten{
+	text-align: center;
+	text-decoration: underline;
+}
+
+#login-section{
+	margin-bottom: 350px;
+	transform: scale(0);
+	transition: 200ms ease-out;
 }
 
 footer nav ul {
