--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -31,15 +31,13 @@ footer, header, hgroup, menu, nav, section {
 body {
 	line-height: 1;
 }
-
-
-
+main {
+	margin: 90px;
+}
 a{
 	text-decoration: none;
 	color: black
 }
-
-
 ol, ul {
 	list-style: none;
 }
@@ -280,7 +278,6 @@ footer nav ul {
 
 .edit-btn{
 	color: white;
-	cursor: pointer;
 }
 .projects-title{
 	position: relative;
@@ -296,3 +293,78 @@ footer nav ul {
 	cursor: pointer;
 
 }
+
+#modal{
+	position: fixed;
+	top:0;
+	left:0;
+	height: 100%;
+	width: 100%;
+	background-color: rgba(0, 0, 0, 0.7);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	transition: 200ms ease-in;
+	transform: scale(0);
+	opacity: 0;
+}
+
+.modal-wrapper{
+	height: 530px;
+	width: 588px;
+	background-color: white;
+	border-radius: 10px;
+	padding: 20px;
+
+}
+
+.xmark-container{
+	display: flex;
+	justify-content: end;
+	
+}
+
+.xmark-container i{
+	cursor: pointer;
+	font-size: 24px;
+	padding: 5px;
+}
+
+#modal-title{
+	text-align: center;
+	font-size: 26px;
+}
+
+#modal-gallery{
+	width: 420px;
+	height: 515px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-between;
+	margin: auto;
+}
+
+.btn-container{
+	border-top: 1px solid #B3B3B3;
+	width: 100%;
+	height: 90px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.btn-container button{
+	font-family: 'Syne';
+	font-weight: 700;
+	color: white;
+	background-color: #1D6154;
+	margin : 2em auto ;
+	width: 235px;
+	text-align: center;
+	border-radius: 60px ;
+	border: none;
+	height: 35px;
+	cursor: pointer;
+}
+
