--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -204,14 +204,13 @@ nav li {
 	transform: translateX(-25px) translateY(7px);
 	box-sizing: border-box;
 	text-align: center;
-	
+	cursor: pointer;
 }
 .gallery img{
 	width: 100%;
 	position: relative;
 
 }
-
 .modal-gallery__eraser img{
 	width: 100%;
 }
@@ -234,13 +233,26 @@ nav li {
 	flex-direction: column;
 }
 
-#contact input, #login-section input {
+#contact input, #login-section input, #modal-send-form select{
 	height: 50px;
-	font-size: 1.2em;
+	font-size: 1.1em;
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+	font-family: "Work Sans";
+	box-sizing: border-box;
 }
-#contact label, #login-section label {
+
+#modal-send-form .modal-send__form-container--title, #modal-send-form .modal-send__form-container--category, #modal-send-form .modal-send__form-container--description{
+	height: 50px;
+	font-size: 1.1em;
+	border: none;
+	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+	font-family: "Work Sans";
+	box-sizing: border-box;
+	padding: 15px;
+}
+
+#contact label, #login-section label{
 	margin: 2em 0 1em 0;
 }
 #contact textarea {
@@ -305,7 +317,7 @@ footer nav ul {
 	
 }
 
-.edit-btn{
+.edit-msg{
 	color: white;
 }
 .projects-title{
@@ -349,17 +361,24 @@ footer nav ul {
 
 .xmark-container{
 	display: flex;
-	justify-content: end;
+	justify-content: space-between;
+
 	
 }
-
-.xmark-container i{
+.xmark-container .fa-xmark{
 	cursor: pointer;
 	font-size: 24px;
 	padding: 5px;
 }
 
-#modal-title{
+.xmark-container .fa-arrow-left{
+	cursor: pointer;
+	font-size: 24px;
+	padding: 5px;
+	opacity: 0;
+}
+
+#modal-title, #modal-title-add{
 	text-align: center;
 	font-size: 26px;
 }
@@ -372,9 +391,11 @@ footer nav ul {
 	justify-content: space-evenly;
 	margin: auto;
 	gap: 5px;
+	opacity: 1;
+	transform: scale(1);
 }
 
-.btn-container{
+.btn-container, .upload-btn-container{
 	border-top: 1px solid #B3B3B3;
 	width: 100%;
 	height: 90px;
@@ -397,3 +418,130 @@ footer nav ul {
 	cursor: pointer;
 }
 
+.modal {
+	display: none;
+	position: fixed; 
+	left: 0;
+	top: 0;
+	width: 100%; 
+	height: 100%; 
+	overflow: auto; 
+	background-color: rgba(0,0,0,0.6); 
+  }
+  
+  .modal-content {
+	background-color: #fefefe;
+	margin: 15% auto; /* 15% from the top and centered */
+	padding: 20px;
+	border: 1px solid #888;
+	width: 45%; 
+	height: 30%;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;  
+}
+
+.modal-content button{
+	font-family: 'Syne';
+	font-weight: 400;
+	color: white;
+	background-color: #1D6154;
+	width: 15%;
+	text-align: center;
+	border-radius: 12px;
+	border: none;
+	height: 30px;
+	cursor: pointer;
+}
+
+#modal-send{
+	visibility: hidden;
+	opacity: 0;
+	transform: scale(0);
+	width: 420px;
+	height: 515px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	margin: auto;
+	gap: 5px;
+}
+
+#modal-send-form{
+	display: flex;
+	flex-direction: column;
+	padding-bottom: 10px;
+	height: 473px;
+	justify-content: space-between;
+}
+
+.modal-send-form__inputs{
+	height: 320px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	justify-content: space-evenly;
+	box-sizing: border-box;
+}
+
+.image-upload-label__container{
+	margin-top: 20px;
+	width: 420px;
+	height: 130px;
+	flex-shrink: 0;
+	border-radius: 3px;
+	background: #E8F1F6;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	justify-content: space-evenly;
+	align-items: center;
+}
+
+.image-upload-label__container i{
+	color: #B3B3B3;
+	font-size: 45px;
+}
+.image-upload-label__container .image-upload-label__container--btn{
+	width: 160px;
+	height: 30px;
+	flex-shrink: 0;
+	border-radius: 50px;
+	background: #CBD6DC;
+	color: #306685;
+	text-align: center;
+	font-family: "Work Sans";
+	font-size: 13px;
+	font-weight: 500;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.image-upload-label__container .image-upload-label__container--text{
+	color: #444;
+	text-align: center;
+	font-family: "Work Sans";
+	font-size: 10px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+}
+.modal-send__form-container--title-label, .modal-send__form-container--category-label{
+	margin: 1.3em 0 0.7em 0;
+}
+
+.upload-btn-container #submit-image-upload-btn{
+	font-family: 'Syne';
+	font-weight: 700;
+	color: white;
+	margin : 2em auto ;
+	width: 235px;
+	text-align: center;
+	border-radius: 60px ;
+	border: none;
+	height: 35px;
+	cursor: pointer;
+	border-radius: 60px;
+	background-color: #A7A7A7;
+}
