--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -418,27 +418,54 @@ footer nav ul {
 	cursor: pointer;
 }
 
-.modal {
+.modal, .img-added-confirmation{
 	display: none;
 	position: fixed; 
+	justify-content: center;
+	align-items: center;
 	left: 0;
 	top: 0;
 	width: 100%; 
 	height: 100%; 
 	overflow: auto; 
-	background-color: rgba(0,0,0,0.6); 
+	background-color: rgba(0,0,0,0.0); 
   }
   
-  .modal-content {
+  .modal-content{
 	background-color: #fefefe;
 	margin: 15% auto; /* 15% from the top and centered */
 	padding: 20px;
-	border: 1px solid #888;
-	width: 45%; 
+	width: 80%; 
 	height: 30%;
 	display: flex;
-	justify-content: space-evenly;
+	align-items: center; 
+	justify-content: space-evenly; 
+	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.8);
+}
+.img-added-confirmation__content{
+	background-color: #fefefe;
+	padding: 20px;
+	width: 55%; 
+	height: 15%;
+	display: flex;
+	justify-content: center;
 	align-items: center;  
+	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.8);
+	border-radius: 30px;
+	background-color: #1D6154;
+}
+.img-added-confirmation__content p{
+	font-family: 'Syne';
+	font-weight: 700;
+	font-size: 18px;
+	text-align: center;
+	color: white;
+}
+
+.img-added-confirmation__content .fa-file-image{
+	font-weight: 700;
+	font-size: 30px;
+	color: white;
 }
 
 .modal-content button{
@@ -446,9 +473,9 @@ footer nav ul {
 	font-weight: 400;
 	color: white;
 	background-color: #1D6154;
-	width: 15%;
+	width: 20%;
 	text-align: center;
-	border-radius: 12px;
+	border-radius: 30px;
 	border: none;
 	height: 30px;
 	cursor: pointer;
@@ -464,6 +491,7 @@ footer nav ul {
 	flex-direction: column;
 	justify-content: space-evenly;
 	margin: auto;
+	margin-top: 3px;
 	gap: 5px;
 }
 
@@ -484,6 +512,8 @@ footer nav ul {
 	box-sizing: border-box;
 }
 
+
+
 .image-upload-label__container{
 	margin-top: 20px;
 	width: 420px;
@@ -496,6 +526,7 @@ footer nav ul {
 	justify-content: center;
 	justify-content: space-evenly;
 	align-items: center;
+	position: relative;
 }
 
 .image-upload-label__container i{
@@ -541,7 +572,14 @@ footer nav ul {
 	border-radius: 60px ;
 	border: none;
 	height: 35px;
-	cursor: pointer;
+	cursor: not-allowed;
 	border-radius: 60px;
 	background-color: #A7A7A7;
+}
+
+.style-for-image-preview{
+	width: 95px;
+	height: 130px;
+	position: absolute;
+	object-fit: cover;
 }
